crates/gossamer-diagnostics/tests/snapshots/GR0011.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0011]: A bare name that some module in this unit declares but which is not - here
--- framed ---
error[GR0011]: A bare name that some module in this unit declares but which is not
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
