crates/gossamer-diagnostics/tests/snapshots/GR0012.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0012]: A `typeInfo::<T>()` named a type with nothing to reflect. The - here
--- framed ---
error[GR0012]: A `typeInfo::<T>()` named a type with nothing to reflect. The
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
