crates/gossamer-diagnostics/tests/snapshots/GR0014.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
assertion_line: 86
expression: rendered
---
--- plain ---
error[GR0014]: A parameter default was not a constant. The default is spliced - here
--- framed ---
error[GR0014]: A parameter default was not a constant. The default is spliced
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
