crates/gossamer-diagnostics/tests/snapshots/GR0016.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0016]: A path named a dependency package that this file does not import. - here
--- framed ---
error[GR0016]: A path named a dependency package that this file does not import.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
