crates/gossamer-diagnostics/tests/snapshots/GR0017.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0017]: A `break` or `continue` has no loop to act on: either none encloses - here
--- framed ---
error[GR0017]: A `break` or `continue` has no loop to act on: either none encloses
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
