crates/gossamer-diagnostics/tests/snapshots/GR0018.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0018]: A path named one of the standard library's macros - `println`, - here
--- framed ---
error[GR0018]: A path named one of the standard library's macros - `println`,
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
