crates/gossamer-diagnostics/tests/snapshots/GT0001.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0001]: The type checker could not reconcile two types it expected to - here
--- framed ---
error[GT0001]: The type checker could not reconcile two types it expected to
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
